@@ -2,6 +2,9 @@
 	- tag for 1.7.3rc1.
 	- trunk has 1.7.4.
 	- unbound-control auth_zone_reload _zone_ option rereads the zonefile.
+	- unbound-control auth_zone_transfer _zone_ option starts the probe
+	  sequence for a master to transfer the zone from and transfers when
+	  a new zone version is available.
 
 14 June 2018: Wouter
 	- #4103: Fix that auth-zone does not insist on SOA record first in
